--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <title>Verkefni 8</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="scripts.js">
 </head>
 
 <body>
@@ -14,7 +13,7 @@
     <ul class="items">
       <li class="item item--done">
         <input type="checkbox" checked class="item__checkbox">
-        <span class="item__text">Sækja verkefni</span>
+        <span id="textItem" class="item__text">Sækja verkefni</span>
         <button class="item__button">Eyða</button>
       </li>
       <li class="item">
